--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.4.11", features = ["derive"] }
+io-uring = "0.6.2"
 libublk = "0.2.1"
 log = "0.4.20"
 nix = { version = "0.27.1", features = ["ioctl"] }
